--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "connected-react-router": "^4.2.3",
     "fetch": "^1.1.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
